Maxlen unique substring + forgotten bookkeeping

--- a/lc/problems.org
+++ b/lc/problems.org
@@ -1,7 +1,7 @@
 * GPT recommended
  - ✓ Two Sum
  - ✓ Add Two Numbers
- - Longest Substring Without Repeating Characters
+ - ✓ Longest Substring Without Repeating Characters
  - Median of Two Sorted Arrays
  - Longest Palindromic Substring
  - ZigZag Conversion
