comment => header syntax

--- a/snaps/pairwiseProd/about.org
+++ b/snaps/pairwiseProd/about.org
@@ -1,17 +1,18 @@
 Given a list of integers where len(nums) < 10**5 give the max pairwise product
 n
-# Sample input 1
+* Sample input
 5
 3 4 5 1 2
 
-# Expected 1
+** Expected
 20
 
-# Sample input 2
+* Sample input (B)
 4
 2 -2 -8 3
 
-# Expected 2
+** Expected (B)
 16
 
 ~0(n)
+~solved in: go cpp python
